[project]
name = "maidai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14", "rust-just>=1.46.0", "ty>=0.0.14"]

[tool.ruff]
fix = true
line-length = 100

[tool.uv]
package = false
